<resources>
    <string name="app_name">ZHKH</string>
    <string name="notification">Оповещение</string>
    <string name="info">Информация</string>
    <string name="win1">Окно 2</string>
    <string name="titleServise">Вас обслуживает\nЖЭС №7</string>
    <string name="descrServise">Адрес: Подвойского пр., д.16, корп.1\nТел.: 588-03-22\nРежим работы: пн-чт - с 9 до 18 часов, пт - с 9 до 17 часов, обед с 13 до 14 часов.</string>
    <string name="ruler">Ответственные лица</string>
    <string name="rulerDescr">Начальник: Полубояров Андрей Семенович\nПрием граждан: пн: c 17 до 19 часов, чт: с 10 до 12 часов\nГлавный инженер: Семенов Дмитрий Валерьевич\nтел.: 588-81-82\nПрием граждан: вт: с 10 до 12 часов, ср: с 17 до 19 часов</string>
    <string name="accaunting">Бухгалтерия</string>
    <string name="accauntingDescr">Адрес: Подвойского пр., д.16, корп.2\nТел.: 588-91-48\nРежим работы: понедельник, среда, четверг - 15:00-19:00, вторник, пятница - 9:00-13:00.</string>
    <string name="dispetcher">Аварийно-Диспетчерская служба</string>
    <string name="dispetcherDescr">Адрес: Искровский пр., д. 6, корп. 3\nТел.: 308-88-01, 308-88-02\nРежим работы: круглосуточно.</string>


    <string name="entryBnt">Войти</string>
    <string name="entryRegBnt">Регистрация</string>
    <string name="cancel">Отмена</string>
    <string-array name="streets">
        <item>Антонова-Овсеенко</item>
        <item>Тельмана</item>
        <item>Большевиков</item>
        <item>Белышева</item>
        <item>Якорная</item>
        <item>Энергетиков</item>
    </string-array>
    <!--Регистрация-->
    <string name="registration">Зарегистрироваться</string>

    <!--Hint-ы-->
    <string name="hintBirth">Дата рождения</string>
    <string name="hintArea">Район</string>
    <string name="hintSerialPass">Серия паспорта</string>
    <string name="hintNumbPass">Номер паспорта</string>
    <string name="hintStreet">Улица</string>
    <string name="hintHouse">Дом</string>
    <string name="hintHesHouse">Корпус</string>
    <string name="hintFlat">Квартира</string>

</resources>
