<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/info_layout"
    tools:context=".ActivityInfo"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleServise"
                android:id="@+id/textView1"
                android:layout_gravity="center_horizontal"
                style="@style/titleText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/descrServise"
                android:id="@+id/textView2"
                android:textAlignment="viewStart"
                style="@style/descText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruler"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                style="@style/titleText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rulerDescr"
                android:id="@+id/textView4"
                android:textAlignment="viewStart"
                style="@style/descText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accaunting"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                style="@style/titleText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/accauntingDescr"
                android:id="@+id/textView6"
                android:textAlignment="viewStart"
                style="@style/descText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dispetcher"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal"
                style="@style/titleText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dispetcherDescr"
                android:id="@+id/textView8"
                android:textAlignment="viewStart"
                style="@style/descText"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
